feat: update sdk to 1.0 with new structure
